--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "cropperjs": "^1.6.1"
     }
 }
